Fix UI alignment

--- a/MyData/MyData/src/main/frontend/src/Components/TagModel.css
+++ b/MyData/MyData/src/main/frontend/src/Components/TagModel.css
@@ -7,6 +7,7 @@
   color: black;
   cursor: pointer;
   min-height: 40px;
+  min-width: 60vw !important;
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
@@ -20,9 +21,10 @@
 .tag-chip {
   background-color: white;
   color: #333;
-  padding: 4px 8px;
+  padding: 8px 8px;
   border-radius: 8px;
   font-size: 14px;
+  font-weight: bold;
 }
 
 /* Modal Styles */
@@ -48,6 +50,10 @@
   margin-bottom: 12px;
   font-size: 18px;
   font-weight: 600;
+  color: black;
+  display: flex;
+  justify-content: center;
+  margin-top: 0px;
 }
 
 .tag-options {
