--- a/MyData/MyData/src/main/frontend/src/Components/TileContainer.css
+++ b/MyData/MyData/src/main/frontend/src/Components/TileContainer.css
@@ -25,7 +25,7 @@
   background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='16' viewBox='0 0 24 24' width='16' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
   background-repeat: no-repeat;
   background-position: right 10px center;
-  background-size: 16px 16px;
+  background-size: 15px 30px 15px 15px;
 }
 
 #category-select option {
